build.gradle 수정 (주석 남겨놨던거 삭제)